feat: log and export salary_currency to user